# Vitameme-tee-verify

./: Cargo.toml  Dockerfile  README.md
src/: error.rs  main.rs
src/ed25519key/: private.pem  public.pem
src/handler/: mod.rs
src/handler/twitter/: generate_redeemcode_and_sign.rs  generate_redemcode_and_sign.rs  mod.rs  verify_and_sign.rs
src/notary/: notary.pub
src/utils/: decode_app_data.rs  deserialize_message.rs  extract_ca.rs  find_spec_attribute.rs  mod.rs  verify_signature.rs
